[project]
name = "yuquetomd"
version = "0.1.0"
description = "Convert Yuque .lakebook exports to Markdown files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "beautifulsoup4>=4.12.2",
    "markdownify>=0.11.6",
    "requests>=2.26.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "mistune>=3.0",
    "python-multipart>=0.0.9",
]
